feat(kapt): silence Unsafe::staticFieldBase warning in fallback builder
kapt's ModuleManipulationUtilsKt calls sun.misc.Unsafe::staticFieldBase
to reflectively open the jdk.compiler module so annotation processors can
reach com.sun.tools.javac internals. On JDK 23+ that emits a terminal-
deprecation warning (JEP 471) on every kapt action that routes through the
stock rules_kotlin KotlinBuilder.

Inject `--sun-misc-unsafe-memory-access=allow` into that fallback JVM via
the java_binary stub's `--wrapper_script_flag=--jvm_flag=` passthrough, so
it lands as a real launch flag with no env var and no `Picked up …` notice.
The option only exists on JDK 23+, so gate on the running feature version
(the shim and fallback builder share the toolchain JDK) — passing it to an
older `java` is a fatal "Unrecognized option".

Scoped to the kapt/fallback path; plain `elide kotlinc` compiles are
unaffected. Part of the cleaner-Bazel-output work (WHIPLASH#1131).